# ITMO-ICT-Creative-Technologies-in-Data-Presentation-2024-2025

./: README.md
lr_1/: pyproject.toml
lr_4/: main.ipynb  pyproject.toml
lr_5/: pyproject.toml
