[project]
name = "lr-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "bokeh>=3.6.3",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
]
